[#noissue] Refactor ServerRequest for gRpc